--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "number-recognition",
   "version": "0.1.0",
+  "author": "Nils Osswald",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -9,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.48.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
